from .storable import Storable

class Announcement(Storable):
    _table_ = 'announcement'
    pass
