from .storable import Storable

class Bteam(Storable):
    _table_ = "bteam"
    pass
