from .storable import Storable

class Chat(Storable):
    _table_ = "chat"
    pass
