from .storable import Storable

class Message(Storable):
    _table_ = "message"
    pass
