from .storable import Storable

class ScoringRule(Storable):
    _table_ = "scoring_rule"
    pass
